# iolanta-adr

./: .gitignore  .remarkrc.mjs  jeeves.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  schema.yaml
docs/: index.md  roadmap.yaml
docs/assets/: status.css
docs/decisions/: adrs-immutable.md  adrs-in-code.md  document-decisions.md  draw-diagram.md  id.md  index.md  scope.md  specify-status.md  start-iolanta-adr.md  template.md  use-adrs.md  use-frontmatter.md  use-mkdocs-material-status.md
docs/decisions/template/: context.json  index.md  pro-et-contra.yaml  sources.yaml  templates.yaml
docs/decisions/use-adrs/: document-design-decisions.yaml  document-formats.yaml  index.md  pro-et-contra.yaml  rfc-vs-adr.yaml
iolanta_adr/: plugin.py
iolanta_adr/data/: template.yaml
