[tool.poetry]
name = "iolanta-adr"
version = "0.1.0"
description = ""
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
mkdocs-iolanta = "^0.1.6"

[tool.poetry.group.dev.dependencies]
jeeves-yeti-pyproject = "^0.2.26"
mkdocs-awesome-pages-plugin = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
